Melhorias: Agora os textos estão mais estéticos.